[package]
name = "nihility-rpc"
version = "0.1.0"
edition = "2024"
authors = ["nihilityer <nihilityer@mail.nihilityer.top>"]
description = "nihility project rpc module"
license = "MIT"
repository = "https://github.com/nihilityer/nihility-rpc"
homepage = "https://github.com/nihilityer/nihility-rpc"
documentation = "https://docs.rs/nihility-rpc"
readme = "README.md"
keywords = ["nihility", "rpc"]

[dependencies]
tracing = { version = "0.1" }
tonic = { version = "0.14", default-features = false, features = ["codegen", "router", "server", "channel"] }
prost = { version = "0.14" }
tonic-prost = { version = "0.14" }
thiserror = { version = "2.0", default-features = false }

[build-dependencies]
tonic-prost-build = { version = "0.14" }

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["local-time", "ansi", "fmt", "std"] }
time = { version = "0.3", default-features = false, features = ["parsing"] }
wav_io = { version = "0.1" }